--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "animate.css": "^3.7.2",
     "gatsby": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
@@ -14,6 +15,7 @@
     "gatsby-transformer-remark": "^2.1.3",
     "node-sass": "^4.9.3",
     "react": "^16.5.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
   },
