--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby-plugin-s3 deploy"
+    "deploy": "npm run build && gatsby-plugin-s3 deploy"
   },
   "devDependencies": {
     "prettier": "^1.14.2"
