--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-s3": "^0.2.5",
     "gatsby-plugin-sass": "^2.0.1",
+    "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
     "node-sass": "^4.9.3",
-    "react": "^16.5.1",
+    "react": "16.8.0",
     "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-dom": "16.8.0",
+    "react-helmet": "^5.2.0",
+    "use-dark-mode": "^2.3.1"
   },
   "keywords": [
     "gatsby"
