--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "animate.css": "^3.7.2",
-    "gatsby": "^2.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "animate.css": "^4.1.1",
+    "gatsby": "^4.21.1",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
@@ -15,9 +19,9 @@
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
     "node-sass": "^4.9.3",
-    "react": "16.8.0",
+    "react": "^16.8.0",
     "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "16.8.0",
+    "react-dom": "^16.8.0",
     "react-helmet": "^5.2.0",
     "use-dark-mode": "^2.3.1"
   },
