--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-s3": "^0.2.5",
+    "gatsby-plugin-s3": "0.3.8",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-source-filesystem": "^2.0.1",
