--- a/package.json
+++ b/package.json
@@ -9,20 +9,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "animate.css": "^4.1.1",
-    "gatsby": "^4.21.1",
-    "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-s3": "0.3.8",
-    "gatsby-plugin-sass": "^2.0.1",
+    "gatsby": "^5.0.0",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.2",
+    "gatsby-plugin-s3": "^0.4.1",
+    "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-use-dark-mode": "^1.1.2",
-    "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-remark": "^2.1.3",
-    "node-sass": "^4.9.3",
-    "react": "^16.8.0",
+    "gatsby-source-filesystem": "^5.3.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "react": "^18.0.0",
     "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.0",
+    "react-dom": "^18.0.0",
+    "sass": "^1.77.2",
     "use-dark-mode": "^2.3.1"
   },
   "keywords": [
@@ -34,7 +32,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "npm run build && npx -n \"-r dotenv/config\" gatsby-plugin-s3 deploy"
+    "deploy": "yarn run build && npm -n \"-r dotenv/config\" gatsby-plugin-s3 deploy"
   },
   "devDependencies": {
     "prettier": "^1.14.2"
